--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -71,6 +71,7 @@
     "react-quill": "^2.0.0",
     "react-quill-new": "^3.6.0",
     "react-resizable-panels": "^3.0.3",
+    "react-toastify": "^11.0.5",
     "recharts": "2.15.4",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
