--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -1,7 +1,7 @@
 services:
   database:
     image: postgres:17
-    container_name: lucieperrier_db
+    container_name: lucieperrier_prod_db
     restart: always
     environment:
       POSTGRES_USER: ${DATABASE_USER}
@@ -11,59 +11,53 @@ services:
     networks:
       - postgres-network
     volumes:
-      - lucieperrier_data:/var/lib/postgres
-  pgadmin:
-    image: dpage/pgadmin4
-    container_name: lucieperrier_pgadmin
-    ports:
-      - 15433:80
-    depends_on:
-      - database
-    environment:
-      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
-      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
-    networks:
-      - postgres-network
-    volumes:
-      - pgadmin_data:/var/lib/pgadmin/
+      - lucieperrier_data:/var/lib/postgresql/data
+
   redis:
     image: redis:alpine
-    container_name: lucieperrier_redis
+    container_name: lucieperrier_prod_redis
     ports:
       - 6379:6379
     networks:
       - postgres-network
     command: redis-server --requirepass ${REDIS_PASSWORD}
     restart: always
+
   api:
-    container_name: lucieperrier_api
+    container_name: lucieperrier_prod_api
     build:
-      context: .
-      dockerfile: ../apps/api/Dockerfile
+      context: ../  # racine du repo
+      dockerfile: apps/api/Dockerfile
     depends_on:
       - database
+      - redis
     ports:
-      - '3000:3000'
+      - '3001:3001'
     networks:
       - postgres-network
-    environment:
-      NODE_ENV: ${NODE_ENV}
-      REDIS_URL: redis://:${REDIS_PASSWORD}@redis:6379
-      DATABASE_URL: postgresql://${DATABASE_USER}:${DATABASE_PASSWORD}@database:5432/${DATABASE_NAME}?schema=public
-      APP_URL: ${APP_URL}
+    env_file:
+      - ../.env
     restart: always
+
   web:
-    container_name: lucieperrier_dashboard
+    container_name: lucieperrier_prod_web
     build:
-      context: .
-      dockerfile: ../apps/tableau-de-bord/Dockerfile
-    restart: always
+      context: ../  # racine du repo
+      dockerfile: apps/web/Dockerfile
+    depends_on:
+      - api
     ports:
-      - '3001:5173'
+      - '3000:3000'
+    env_file:
+      - ../.env
+    restart: always
+    volumes:
+      - /app/node_modules
+    networks:
+      - postgres-network
 
 volumes:
   lucieperrier_data:
-  pgadmin_data:
 
 networks:
   postgres-network:
