--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -3,49 +3,50 @@
 # -----------------------------
 FROM node:22-bullseye-slim AS base
 
-# Installer les dépendances système
+# Dépendances système nécessaires
 RUN apt-get update && apt-get install -y --no-install-recommends \
     bash git curl openssl ca-certificates \
  && rm -rf /var/lib/apt/lists/*
 
-WORKDIR /app
+WORKDIR /app/apps/web
 
 # -----------------------------
 # Builder
 # -----------------------------
 FROM base AS builder
 
-# Copier seulement package.json et yarn.lock pour installer les dépendances
+# Copier package.json et yarn.lock pour installer les dépendances
+COPY apps/web/package.json apps/web/package.json
 COPY package.json yarn.lock ./
-COPY apps/web/package.json ./apps/web/
 
-# Activer corepack et préparer Yarn 4
+# Préparer Yarn
 RUN corepack enable && corepack prepare yarn@4.7.0
 
-# Installer toutes les dépendances
+# Installer Next.js globalement (moins recommandé)
+RUN yarn global add next
+
+# Installer les dépendances locales
 RUN yarn install --frozen-lockfile
 
-# Copier le reste du code source
-COPY apps/web/ ./apps/web/
+# Copier tout le code source
+COPY apps/web/ .
 
 # Build Next.js
-WORKDIR /app/apps/web
 RUN yarn build
 
 # -----------------------------
 # Production
 # -----------------------------
 FROM base AS production
-WORKDIR /app
+WORKDIR /app/apps/web
 
-# Copier uniquement les fichiers nécessaires pour la production
+# Copier le build et les fichiers nécessaires
 COPY --from=builder /app/apps/web/.next ./.next
 COPY --from=builder /app/apps/web/public ./public
 COPY --from=builder /app/apps/web/package.json ./package.json
 COPY --from=builder /app/apps/web/node_modules ./node_modules
 
-# Exposer le port de l'app
 EXPOSE 3000
 
-# Lancer l'application
-CMD ["yarn", "start"]
+# Lancer Next.js avec le binaire global
+CMD ["next", "start"]
